--- a/the website.html
+++ b/the website.html
@@ -1,4 +1,9 @@
 <h1>Lukes Cool Website!</h1>
+<img src="thelukeweb-icon.ico">
+
+<p style="font-family:Comic Sans MS"/> thelukeguide
+<a href="web page 2/thewebpage2.html">page 2</a>
+
 <!Doctype Html>  
 <Html>     
 <Head>      
@@ -90,7 +95,7 @@
    </body>
 </html>
 
-<p style="font-family: Comic Sans MS">drink this:
+<p style="font-family: Comic Sans MS">A BOTTLE OF WATER A DAY KEEPS BETTYS BITTER BUTTER AWAY
 <body>
 
 <img src="waterbottle.jpg"/>
@@ -107,11 +112,123 @@
     </style>
    </head>
    <body>
-      <h1>website still under construction!</h1>
+      <h1>BRITISH 101</h1>
+   </body>
+</html>
+
+<p style="font-family: Comic Sans MS">Warm Up:
+<img src="british101-butter.jpg"/>
+<p style="font-family: Comic Sans MS">Pronounce This In A British Accent: The great Greek grape growers grow great Greek grapes greatly
+
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>BRITISH 101 CLASS DISMISSED.</h1>
    </body>
 </html>
 
 
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>DA MEMES</h1>
+   </body>
+</html>
+<img src="PS4meme1.jpg"/>
+<img src="tacobellmeme1.jpeg"/>
+<img src="meme3.jpg"/>
+<img src="meme4.jpg"/>
+<img src="meme5.jpg"/>
+
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>THATS ALL THE MEMES!</h1>
+   </body>
+
+
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>website still under construction!</h1>
+   </body>
+</html>
+
+<img src="underconstruction.gif"/>
+
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>Luke Reccommends!</h1>
+   </body>
+</html>
+
+<p style="font-family: Comic Sans MS">Games: Minecraft, Mario Kart Wii and Double Dash and 7 and 8, Super Mario Sunshine, and Portal 1 & 2
+
+<p style="font-family: Comic Sans MS">Movies: Minions, Minions: The Rise Of Gru, The Spongebob Squarepants Movie, The Super Mario Bros Movie, and Ghostbusters
+
+<p style="font-family: Comic Sans MS">Books (If You Have To Read): Diary of a Wimpy Kid and Gordon Korman Books
+
+
+
+
+
+
+
+<html>
+   <head>
+    <style>
+      @font-face { font-family: Minecraft; src: url('Minecraft.TTF'); } 
+      h1 {
+         font-family: Minecraft
+      }
+    </style>
+   </head>
+   <body>
+      <h1>Thats not all yet..</h1>
+   </body>
+</html>
+
+<p style="font-family:Comic Sans MS"/> thelukeguide
+<a href="web page 2/thewebpage2.html">the second page</a>
+
+
+
 
 <p style="font-family: Comic Sans MS">brought to U by tottaly a real company Inc.
-<p style="font-family: Comic Sans MS">i hope you like my website. PRERELEASE v2.0 BETA
+<p style="font-family: Comic Sans MS">i hope you like my website. RELEASE ONE REVISION 1
