--- a/the website.html
+++ b/the website.html
@@ -1,7 +1,9 @@
 <h1>Lukes Cool Website!</h1>
 <img src="thelukeweb-icon.ico">
+<title>TLW 1 - Main Page</title>
 
 <p style="font-family:Comic Sans MS"/> thelukeguide
+<a href="links/index.html">Links</a>
 <a href="web page 2/thewebpage2.html">page 2</a>
 
 <!Doctype Html>  
@@ -23,6 +25,7 @@
    <body>
       <h1>Youtube Channel</h1>
         <a href="https://www.youtube.com/@LukeHDPlays">click here to see mah yt channel</a>
+<a href="https://www.youtube.com/@LukeTekuelve">click here to mah other yt channel</a>
       <p>
       I am a person who makes youtube content (VERY COOL CHECK OUT)
       </p>
@@ -153,6 +156,8 @@
 <img src="meme3.jpg"/>
 <img src="meme4.jpg"/>
 <img src="meme5.jpg"/>
+<img src="meme6.jpg"/>
+<img src="meme7.png"/>
 
 <html>
    <head>
@@ -225,10 +230,12 @@
 </html>
 
 <p style="font-family:Comic Sans MS"/> thelukeguide
-<a href="web page 2/thewebpage2.html">the second page</a>
+<a href="links/index.html">Links</a>
+<a href="web page 2/thewebpage2.html">page 2</a>
+
 
 
 
 
 <p style="font-family: Comic Sans MS">brought to U by tottaly a real company Inc.
-<p style="font-family: Comic Sans MS">i hope you like my website. RELEASE ONE REVISION 1
+<p style="font-family: Comic Sans MS">i hope you like my website. RELEASE ONE REVISION 4
